# Psoc6-Qt-Handling

./: .gitignore  CMakeLists.txt  README.md  main.c
MudrykTestTask_modus/: .gitignore  main.c
MudrykTestTask_modus/.cache/clangd/index/: cycfg_capsense.c.E7F7CBE3B4E98577.idx  cycfg_capsense.h.3D9160927C39ABF4.idx  cycfg_qspi_memslot.c.EAF65386CF660C72.idx  cycfg_qspi_memslot.h.9F221B674F7A26D7.idx  startup_psoc6_01_cm4.S.265190DEB32B16AB.idx  system_psoc6.h.D244A10A2B734650.idx  system_psoc6_cm4.c.4371AF5CDDB4BD09.idx
include/: blinking_handler.h
qml/: Main.qml
src/: blinking_handler.cpp  main.cpp
